# sicp-bot

./: .gitignore  LICENSE  README  bot.ml  dune  dune-project  init.ml  quotes  quotes-twitter.json  serial.ml  splitquotes.ml  util-nocurly-nohttps.ml.bak  util.ml
