(executable
 (name bot)
 (modes byte)
 (public_name sicp-bot)
 (ocamlopt_flags -compact -O2 ;-function-sections
     -ccopt -Wl,--gc-sections -ccopt -s -ccopt -Os -ccopt -flto)
 (ocamlc_flags -compat-32)
 (libraries curly yojson)
 (preprocess (pps ppx_deriving_yojson)))

(install 
 (section share)
 (files quotes))
